--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
             "AwesomePhpCode\\IteratorPattern\\": "src/"
         }
     },
+    "require": {
+        "ext-mbstring": "*"
+    },
     "autoload-dev": {
         "psr-4": {
             "AwesomePhpCode\\IteratorPattern\\Tests\\": "tests/"
