--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,32 @@
             "email": "fermius.us@gmail.com"
         }
     ],
+    "require": {
+        "php": "7.4.*",
+        "ext-mbstring": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.5"
+    },
+    "scripts": {
+        "phpunit": "phpunit --stop-on-error --stop-on-failure --testdox",
+        "phpunit-xml": "phpunit --stop-on-error --stop-on-failure --coverage-clover phpunit.coverage.xml",
+        "phpcs-check": "phpcs --colors -s",
+        "phpcs-fix": "phpcbf --colors -s",
+        "phpcs-auto-check": "@phpcs-check --standard=.phpcs.xml",
+        "phpcs-auto-fix": "@phpcs-fix --standard=.phpcs.xml",
+        "phpcs-auto-check-project": "phpcs --report=summary -p",
+        "phpcs-auto-fix-project": "phpcbf --report=summary -p"
+    },
     "autoload": {
         "psr-4": {
             "AwesomePhpCode\\IteratorPattern\\": "src/"
         }
     },
-    "require": {
-        "ext-mbstring": "*"
-    },
     "autoload-dev": {
         "psr-4": {
             "AwesomePhpCode\\IteratorPattern\\Tests\\": "tests/"
         }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5"
     }
 }
